@@ -238,7 +238,8 @@ div#main {
     margin-right: auto;
     margin-top: 0px;
     padding-top: 0px;
-    width: 955px;
+    width: 100%;
+    min-width: 955px;
     height: 100%;
     top: 0px;
     bottom: 0px;
@@ -326,7 +327,8 @@ div#admin-spanright {
 }
 
 div#layout {
-    width: 935px;
+    width: auto;
+    min-width: 935px;
     padding: 0px;
     margin: 10px 10px 0px 10px;
 }
@@ -404,7 +406,8 @@ div#top {
     padding-bottom: 0px;
     margin: 0px;
     height: 102px;
-    width: 955px;
+    width: 100%;
+    min-width: 955px;
     background: url(../images/topgrad.png) repeat-x;
 }
 
@@ -430,7 +433,9 @@ div.fullpage {
     margin: 10px 10px 0px 10px;
     background-color: #fff;
     padding: 0px;
-    width: 935px;
+    width: auto;
+    height: 100%;
+    min-width: 935px;
 }
 
 div.spacer {
@@ -600,7 +605,8 @@ button#createAccountSubmit {
 
 div#footer {
     color: #000;
-    width: 915px;
+    width: auto;
+    min-width: 915px;
     padding: 6px 20px 0px 20px;
     font-family: verdana, sans-serif;
     font-size: 11px;
