@@ -93,6 +93,7 @@ Web Front End Changes
   will now attempt to load group-appliance from the label the platform
   is on, and only fall back to the groupApplianceLabel if no platform is
   selected. (RBL-3541)
+* The application now expands to fill the width of the browser. (RBL-3740)
 
 Bug Fixes
 ---------------------
